samples/_failures_safe/1761153135_06cf47_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a410e353.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_a410e353.c:171:16: error: expected ‘:’ at end of input
  171 |         default
      |                ^
      |                :
./samples/SAFE/__tmp_a410e353.c:171:9: error: expected declaration or statement at end of input
  171 |         default
      |         ^~~~~~~
./samples/SAFE/__tmp_a410e353.c:171:9: error: expected declaration or statement at end of input
